--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
   <build>
     <finalName>okcrud</finalName>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven 
+    <pluginManagement><!-- lock down plugins versions to avoid using Maven
         defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
@@ -70,4 +70,13 @@
       </plugins>
     </pluginManagement>
   </build>
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>com.github.spotbugs</groupId>
+        <artifactId>spotbugs-maven-plugin</artifactId>
+        <version>4.8.1.0</version>
+      </plugin>
+    </plugins>
+  </reporting>
 </project>
